# ChangeLog for mail-client/roundcube
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/roundcube/ChangeLog,v 1.4 2009/04/13 08:27:00 hollow Exp $

*roundcube-0.2.1 (13 Apr 2009)

  13 Apr 2009; Benedikt Böhm <hollow@gentoo.org> +roundcube-0.2.1.ebuild:
  version bump wrt #262894

  28 Jan 2009; Peter Volkov <pva@gentoo.org> roundcube-0.2.ebuild:
  Fixed typo. For spell checking we need spell in php, not ssl.

  07 Jan 2009; Brent Baude <ranger@gentoo.org> roundcube-0.2.ebuild:
  Marking roundcube-0.2 ~ppc and ~ppc64 for bug 253492

*roundcube-0.2 (02 Jan 2009)

  02 Jan 2009; Benedikt Böhm <hollow@gentoo.org> +files/postinstall-en.txt,
  +metadata.xml, +roundcube-0.2.ebuild:
  initial commit
