@@ -1,6 +1,11 @@
 # ChangeLog for mail-client/roundcube
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/roundcube/ChangeLog,v 1.4 2009/04/13 08:27:00 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/roundcube/ChangeLog,v 1.5 2009/07/18 19:29:14 hollow Exp $
+
+*roundcube-0.2.2 (18 Jul 2009)
+
+  18 Jul 2009; Benedikt Böhm <hollow@gentoo.org> +roundcube-0.2.2.ebuild:
+  version bump wrt #272487
 
 *roundcube-0.2.1 (13 Apr 2009)
 
